<resources>
    <string name="app_name">AppPaciente</string>
    <string name="ver_graficas">Show Graphs</string>
    <string name="emergencia">Emergency</string>
    <string name="bienvenido">Welcome</string>
    <string name="volume">Volume</string>
    <string name="steps">Steps</string>
    <string name="llamada_doc">Calling doctor</string>
    <string name="id_del_paciente">Patient ID</string>
    <string name="telefono_doctor">Doctor phone</string>
    <string name="guardar">Save</string>
    <string name="bluetooth_mac_address">Bluetooth MAC Address</string>
    <string name="checando">Verifying</string>
    <string name="no_id">Error, ID not registered in server</string>
</resources>
